; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/ti/extr_cpsw.c_cpsw_rx_poll.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/ti/extr_cpsw.c_cpsw_rx_poll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.napi_struct = type { i32 }
%struct.cpsw_common = type { i32, i32*, %struct.TYPE_4__*, %struct.TYPE_3__* }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.napi_struct*, i32)* @cpsw_rx_poll to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cpsw_rx_poll(%struct.napi_struct* %0, i32 %1) #0 {
  %3 = alloca %struct.napi_struct*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.cpsw_common*, align 8
  %6 = alloca i32, align 4
  store %struct.napi_struct* %0, %struct.napi_struct** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.napi_struct*, %struct.napi_struct** %3, align 8
  %8 = call %struct.cpsw_common* @napi_to_cpsw(%struct.napi_struct* %7)
  store %struct.cpsw_common* %8, %struct.cpsw_common** %5, align 8
  %9 = load %struct.cpsw_common*, %struct.cpsw_common** %5, align 8
  %10 = getelementptr inbounds %struct.cpsw_common, %struct.cpsw_common* %9, i32 0, i32 3
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i64 0
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @cpdma_chan_process(i32 %14, i32 %15)
  store i32 %16, i32* %6, align 4
  %17 = load i32, i32* %6, align 4
  %18 = load i32, i32* %4, align 4
  %19 = icmp slt i32 %17, %18
  br i1 %19, label %20, label %43

20:                                               ; preds = %2
  %21 = load %struct.napi_struct*, %struct.napi_struct** %3, align 8
  %22 = load i32, i32* %6, align 4
  %23 = call i32 @napi_complete_done(%struct.napi_struct* %21, i32 %22)
  %24 = load %struct.cpsw_common*, %struct.cpsw_common** %5, align 8
  %25 = getelementptr inbounds %struct.cpsw_common, %struct.cpsw_common* %24, i32 0, i32 2
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i32 0, i32 0
  %28 = call i32 @writel(i32 255, i32* %27)
  %29 = load %struct.cpsw_common*, %struct.cpsw_common** %5, align 8
  %30 = getelementptr inbounds %struct.cpsw_common, %struct.cpsw_common* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 8
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %33, label %42

33:                                               ; preds = %20
  %34 = load %struct.cpsw_common*, %struct.cpsw_common** %5, align 8
  %35 = getelementptr inbounds %struct.cpsw_common, %struct.cpsw_common* %34, i32 0, i32 0
  store i32 0, i32* %35, align 8
  %36 = load %struct.cpsw_common*, %struct.cpsw_common** %5, align 8
  %37 = getelementptr inbounds %struct.cpsw_common, %struct.cpsw_common* %36, i32 0, i32 1
  %38 = load i32*, i32** %37, align 8
  %39 = getelementptr inbounds i32, i32* %38, i64 0
  %40 = load i32, i32* %39, align 4
  %41 = call i32 @enable_irq(i32 %40)
  br label %42

42:                                               ; preds = %33, %20
  br label %43

43:                                               ; preds = %42, %2
  %44 = load i32, i32* %6, align 4
  ret i32 %44
}

declare dso_local %struct.cpsw_common* @napi_to_cpsw(%struct.napi_struct*) #1

declare dso_local i32 @cpdma_chan_process(i32, i32) #1

declare dso_local i32 @napi_complete_done(%struct.napi_struct*, i32) #1

declare dso_local i32 @writel(i32, i32*) #1

declare dso_local i32 @enable_irq(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
